--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.6.0'
     //Check for v11.4.2 or higher
     implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
 apply plugin: 'com.google.gms.google-services'
