--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,14 +41,10 @@ dependencies {
 
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'commons-io:commons-io:2.4'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.zoonref:simple-view-behavior:1.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7+'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    implementation 'com.github.clans:fab:1.6.4'
-
-    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.github.clans:fab:1.6.4'  //floactionButton
 
 
     // Add dependency
