--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,12 @@
         android:allowBackup="true"
         android:icon="@drawable/posible"
         android:label="@string/app_name"
+        android:name=".Util.Initializer"
         android:roundIcon="@drawable/posible"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+
         <activity android:name=".Activitys.ListAlertas">
             <intent-filter>
                 <action android:name="ListAlertas" />
