--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".Util.Initializer"
         android:allowBackup="true"
         android:icon="@drawable/posible"
         android:label="@string/app_name"
-        android:name=".Util.Initializer"
         android:roundIcon="@drawable/posible"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".Activitys.CambiarContrasena"></activity>
+        <activity android:name=".Activitys.EditarPerfil" />
+        <activity android:name=".Activitys.MonitoreoBasurero" />
         <activity android:name=".Activitys.ListAlertas">
             <intent-filter>
                 <action android:name="ListAlertas" />
@@ -27,9 +29,10 @@
         </activity>
         <activity android:name=".Activitys.GPSinactivo" />
         <activity android:name=".Activitys.DetallerPrimeroAuxilios" />
-        <activity android:name=".Activitys.Splash" >
+        <activity android:name=".Activitys.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -64,13 +67,10 @@
         <activity
             android:name=".Activitys.Login"
             android:configChanges="screenSize|orientation"
-            android:windowSoftInputMode="stateHidden">
-
-        </activity>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Principal.MainActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
-            />
+            android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
